# ruskit

./: .env  .env.example  .gitignore  .sea-orm.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
config/: storage.toml
crates/ruskit_macros/: Cargo.toml
crates/ruskit_macros/src/: lib.rs
database/: database.sqlite
docs/: README.md  commands.md  controllers.md  dtos.md  entities.md  extractors.md  factories.md  frontend.md  middleware.md  migrations.md  models.md  queues.md  routing.md  seeders.md  validation.md  views.md
init/template/: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  cargo-generate.toml
init/template/src/: main.rs  web.rs
init/template/src/app/: mod.rs
init/template/src/app/controllers/: home.rs  mod.rs
init/template/src/app/dtos/: mod.rs
init/template/src/app/factories/: mod.rs
init/template/src/app/models/: mod.rs
init/template/src/app/seeders/: mod.rs
init/template/templates/: base.html  home.html
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240221_000001_create_users_table.rs  m20240320_000001_create_cache_table.rs  m20250222_022856_create_posts_table.rs  m20250222_030920_create_comments_table.rs  m20250222_093246_add_auth_fields_to_users.rs  m20250222_215612_create_jobs_table.rs
migrations/: 20240222_create_users_table.rs
resources/js/: app.jsx  app.tsx  vite-env.d.ts
resources/js/pages/: About.jsx  About.tsx  Dashboard.tsx  Home.jsx  Posts.tsx
resources/js/pages/Auth/: Login.tsx  Register.tsx
resources/js/pages/Posts/: Create.tsx  Edit.tsx  Index.tsx  Show.tsx
resources/js/types/: generated.ts
rustavel_derive/: Cargo.toml
rustavel_derive/src/: lib.rs
scripts/: Cargo.toml
src/: cli.rs  lib.rs  main.rs  web.rs
src/app/: mod.rs
src/app/console/: kernel.rs  mod.rs
src/app/controllers/: api.rs  auth_controller.rs  category_controller.rs  comment_controller.rs  docs_controller.rs  inertia_controller.rs  mod.rs  pages.rs  post_controller.rs  posts_controller.rs  product_controller.rs  user_controller.rs
src/app/dtos/: about.rs  category.rs  comment.rs  mod.rs  post.rs  posts.rs  product.rs  user.rs
src/app/entities/: category.rs  comment.rs  comments.rs  lib.rs  mod.rs  post.rs  prelude.rs  product.rs  sample.rs  user.rs
src/app/factories/: mod.rs  user_factory.rs
src/app/http/templates/: base.html
src/app/jobs/: mod.rs  test_job.rs
src/app/middleware/: auth.rs
src/app/models/: category.rs  comment.rs  mod.rs  post.rs  product.rs  user.rs
src/app/seeders/: mod.rs  postseeder.rs  user_seeder.rs
src/app/services/: auth_service.rs  mod.rs
src/bootstrap/: app.rs  mod.rs
src/cli/: commands.rs  error.rs  mod.rs
src/cli/commands/: db_seed.rs
src/cli/handlers/: database.rs  make.rs  mod.rs  project.rs  server.rs
src/config/: mod.rs
src/framework/: app.rs  mod.rs  prelude.rs  routing.rs  typescript.rs  views.rs
src/framework/bootstrap/: app.rs
src/framework/cache/: config.rs  mod.rs
src/framework/cache/drivers/: database.rs  mod.rs  redis.rs
src/framework/cli/: commands.rs  error.rs  mod.rs
src/framework/cli/commands/: mod.rs  schedule.rs
src/framework/cli/handlers/: make.rs  mod.rs  project.rs  server.rs
src/framework/config/: mod.rs
src/framework/database/: config.rs  factory.rs  migration.rs  mod.rs  model.rs  query_builder.rs  schema.rs  schema_builder.rs  seeder.rs  validation_derive.rs
src/framework/database/migrator/: m20240222_000001_create_users_table.rs  mod.rs
src/framework/http/: client.rs  config.rs  error.rs  mock.rs  queue.rs
src/framework/inertia/: mod.rs
src/framework/middleware/: internal.rs  mod.rs  presets.rs
src/framework/queue/: config.rs  job.rs  mod.rs  worker.rs
src/framework/queue/drivers/: database.rs  mod.rs  sqs.rs
src/framework/schedule/: mod.rs
src/framework/storage/: config.rs  mod.rs
src/framework/storage/drivers/: local.rs  mod.rs
src/framework/testing/: assertions.rs  database.rs  http.rs  mod.rs
src/framework/validation/: mod.rs
src/http/: mod.rs
src/routes/: mod.rs
templates/: about.html  app.html  base.html  docs.html  docs_base.html  home.html  landing.html
templates/docs/: commands.html  controllers.html  dtos.html  entities.html  extractors.html  factories.html  frontend.html  http.html  middleware.html  migrations.html  models.html  page.html  queues.html  routing.html  scheduling.html  seeders.html  test.html  validation.html  views.html
tests/: example_test.rs
ts-collector/: Cargo.toml
ts-collector/src/: lib.rs
ts_export_derive/: Cargo.toml
ts_export_derive/src/: lib.rs
