[package]
name = "rustavel"
version = "0.1.0"
edition = "2021"
default-run = "rustavel"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }
askama = "0.12"
askama_axum = "0.4.0"
clap = { version = "4.5.1", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
console = "0.15.8"
walkdir = "2.4.0"
ctrlc = "3.4.2"
tokio-stream = "0.1.14"
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }
once_cell = "1.19.0"
