[workspace]
members = [
    "ts-collector",
    "ts_export_derive",
    "rustavel_derive",
    "migration"
]

[package]
name = "ruskit"
version = "0.1.5"
edition = "2021"
description = "A modern web framework for Rust inspired by Laravel"
authors = ["Dayem Siddiqui <dayemsiddiqui@gmail.com>"]
license = "MIT"
repository = "https://github.com/dayemsiddiqui/ruskit"
documentation = "https://docs.rs/ruskit"
homepage = "https://ruskit.rs"
keywords = ["web", "framework", "http", "mvc", "laravel"]
categories = ["web-programming", "network-programming"]
readme = "README.md"
default-run = "ruskit"

[[bin]]
name = "ruskit"
path = "src/bin/ruskit.rs"

[[bin]]
name = "cargo-kit"
path = "src/bin/cargo-kit.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio", "http1", "http2", "tower-log"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hyper = { version = "1.0", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
askama_escape = "0.1"
clap = { version = "4.5.1", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
console = "0.15.8"
walkdir = "2.4.0"
ctrlc = "3.4.2"
tokio-stream = "0.1.14"
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }
once_cell = "1.19.0"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10.2"
ruskit_macros = { version = "0.1.0", path = "crates/ruskit_macros" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
Inflector = "0.11.4"
fake = { version = "2.9", features = ["derive"] }
inventory = "0.3"
pulldown-cmark = "0.9"
axum-inertia = "0.6.0"
ts-rs = { version = "7.1", features = ["format"] }
ts_export_derive = { version = "0.1.0", path = "ts_export_derive" }
rustavel_derive = { version = "0.1.0", path = "./rustavel_derive" }
paste = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"
dotenvy = "0.15"
axum-login = "0.12"
bcrypt = "0.15"
tower-sessions = "0.10"
tower-sessions-sqlx-store = { version = "0.10", features = ["sqlite"] }
redis = { version = "0.24", features = ["tokio-comp"] }
