[package]
name = "rustavel_derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for the Ruskit web framework"
license = "MIT"
authors = ["Dayem Siddiqui <dayemsiddiqui@gmail.com>"]
repository = "https://github.com/dayemsiddiqui/ruskit"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0" 