[package]
name = "ruskit_macros"
version = "0.1.1"
edition = "2021"
description = "Procedural macros for the Ruskit web framework"
authors = ["Dayem Siddiqui <dayemsiddiqui@gmail.com>"]
license = "MIT"
repository = "https://github.com/dayemsiddiqui/ruskit"
documentation = "https://docs.rs/ruskit_macros"
homepage = "https://ruskit.rs"
keywords = ["web", "framework", "macros", "proc-macro"]
categories = ["web-programming::http-server", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
askama = "0.12" 