[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
description = "{{description}}"

[dependencies]
ruskit = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
once_cell = "1.8"
fake = "2.6"

[dev-dependencies]
cargo-watch = "8.4"
cargo-make = "0.37" 